<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

 <Space
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/result"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text = "  "/>
  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/result2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text = "  "/>
  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/result3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text = "  "/>

 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/_1"
      android:layout_margin="5dp"
      android:textSize="@dimen/size_button" />
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/_2"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:textSize="@dimen/size_button" />
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/_3"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:textSize="@dimen/size_button" />
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/delit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/powderBlue"
      android:text="@string/_del"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:textSize="@dimen/size_button"/>
 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center">
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_4"
      android:layout_width="0dp"
      android:layout_margin="5dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/_4"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_5"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_6"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_6"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/mult"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:backgroundTint="@color/powderBlue"
      android:layout_margin="5dp"
      android:text="@string/_mult"
      android:textSize="@dimen/size_button"/>
 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center">
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_7"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_7"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_8"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_8"
      android:textSize="@dimen/size_button" />
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_9"
      android:layout_width="0dp"
      android:layout_margin="5dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/_9"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/minus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_minus"
      android:backgroundTint="@color/powderBlue"
      android:textSize="@dimen/size_button"/>
 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center">
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_0"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_0"
      android:textSize="@dimen/size_button" />
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/point"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/powderBlue"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:text="@string/_point"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/ravno"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:backgroundTint="@color/powderBlue"
      android:text="@string/_ravno"
      android:textSize="@dimen/size_button"/>
  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/plus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:backgroundTint="@color/powderBlue"
      android:text="@string/_plus"
      android:textSize="@dimen/size_button"/>
 </LinearLayout>

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center">

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/lastic"
      android:layout_width="82dp"
      android:layout_height="42dp"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:text="---"
      android:textSize="@dimen/size_button" />
 </LinearLayout>

 <Space
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"/>
</LinearLayout>